# OpportunityOS

./: .dockerignore  .env.example  .env.staging.example  .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  Makefile  README.md  alembic.ini  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pytest-diagnostics.yml
docs/: EVALUATION.md  EVALUATION_V3.md  RELEVANCE_SCORING.md  STAGING_DEPLOYMENT.md
docs/adr/: 0001-orchestration-boundaries.md  0002-learning-safety.md  0003-resume-onboarding-and-persistence.md  0004-user-memory-and-claim-guardrails.md  0005-private-staging-single-vm.md  0005-same-origin-web-workspace.md  ADR-0005-bounded-live-model-runtime.md
examples/: analyse_request.json  analyse_response.json  onboard_request.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  (+3 more)
scripts/: backup_staging.sh  container-entrypoint.sh  deploy_staging.sh  restore_staging.sh  verify_staging.sh
tests/: conftest.py  test_api.py  test_benchmark_label_correction.py  test_deployment_assets.py  test_evaluation.py  test_extraction_labelled_evaluation.py  test_learning.py  test_live_grounding.py  test_live_model_runtime.py  test_live_provider_adapters.py  test_memory_quality.py  test_models.py  test_onboarding.py  test_persistence.py  test_relevance_quality.py  test_research_security.py  test_resume_files.py  test_role_input_and_evaluation_history.py  test_scoring.py  test_service.py  test_source_aware_extraction.py  test_uncertainty_feedback_gates.py  test_v03.py  test_web_shell.py  test_web_ui.py
(+47 files in other folders)
