[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "opportunityos"
version = "0.12.2"
description = "Personal opportunity intelligence and adaptive relevance system"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "Proprietary"}
authors = [{name = "Maulin Shah"}]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "pypdf>=6.0,<7.0",
  "python-docx>=1.2,<2.0",
  "openai>=1.13.3,<3.0",
  "anthropic>=0.40,<1.0",
  "crewai>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.11,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opportunityos"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form"]
